// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SuggestedMilestoneBanner component > renders 1 suggested milestone and does not show isAdded milestones 1`] = `
<DocumentFragment>
  <div
    class="bg-accent-cool-lighter shadow-2 position-relative"
  >
    <div
      class="grid-container padding-y-2"
      data-testid="gridContainer"
    >
      <div
        class="grid-row flex-no-wrap"
        data-testid="grid"
      >
        <div
          class="bg-accent-cool-darker circle-3 margin-right-2 display-flex flex-align-center flex-justify-center"
        >
          <svg
            class="usa-icon text-white"
            focusable="false"
            height="1em"
            role="img"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M9 21c0 .55.45 1 1 1h4c.55 0 1-.45 1-1v-1H9v1zm3-19C8.14 2 5 5.14 5 9c0 2.38 1.19 4.47 3 5.74V17c0 .55.45 1 1 1h6c.55 0 1-.45 1-1v-2.26c1.81-1.27 3-3.36 3-5.74 0-3.86-3.14-7-7-7zm2 11.7V16h-4v-2.3C8.48 12.63 7 11.53 7 9c0-2.76 2.24-5 5-5s5 2.24 5 5c0 2.49-1.51 3.65-3 4.7z"
            />
          </svg>
        </div>
        <span
          class="margin-y-0"
        >
          There are 2 suggested milestones for your model based on answers in the Model Plan. 
          <a
            class="usa-link"
            href="/models/0272ca43-1ec1-45a6-a06f-8e2def7f6888/collaboration-area/model-to-operations/milestone-library"
          >
            View suggested milestones
            <svg
              class="usa-icon margin-left-05 top-05"
              focusable="false"
              height="1em"
              role="img"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m12 4-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
              />
            </svg>
          </a>
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SuggestedMilestoneBanner component > renders correctly and has no suggested milestones and matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="bg-accent-cool-lighter shadow-2 position-relative"
  >
    <div
      class="grid-container padding-y-2"
      data-testid="gridContainer"
    >
      <div
        class="grid-row flex-no-wrap"
        data-testid="grid"
      >
        <div
          class="bg-accent-cool-darker circle-3 margin-right-2 display-flex flex-align-center flex-justify-center"
        >
          <svg
            class="usa-icon text-white"
            focusable="false"
            height="1em"
            role="img"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M9 21c0 .55.45 1 1 1h4c.55 0 1-.45 1-1v-1H9v1zm3-19C8.14 2 5 5.14 5 9c0 2.38 1.19 4.47 3 5.74V17c0 .55.45 1 1 1h6c.55 0 1-.45 1-1v-2.26c1.81-1.27 3-3.36 3-5.74 0-3.86-3.14-7-7-7zm2 11.7V16h-4v-2.3C8.48 12.63 7 11.53 7 9c0-2.76 2.24-5 5-5s5 2.24 5 5c0 2.49-1.51 3.65-3 4.7z"
            />
          </svg>
        </div>
        <span
          class="margin-y-0"
        >
          There aren't currently any suggested milestones for your model. MINT may suggest model milestones as you and your team fill out more of your 
          <a
            class="usa-link"
            href="/models/0272ca43-1ec1-45a6-a06f-8e2def7f6888/collaboration-area/task-list"
          >
            Model Plan
          </a>
          .
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SuggestedMilestoneBanner component > renders correctly and has one suggested milestone and matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="bg-accent-cool-lighter shadow-2 position-relative"
  >
    <div
      class="grid-container padding-y-2"
      data-testid="gridContainer"
    >
      <div
        class="grid-row flex-no-wrap"
        data-testid="grid"
      >
        <div
          class="bg-accent-cool-darker circle-3 margin-right-2 display-flex flex-align-center flex-justify-center"
        >
          <svg
            class="usa-icon text-white"
            focusable="false"
            height="1em"
            role="img"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M9 21c0 .55.45 1 1 1h4c.55 0 1-.45 1-1v-1H9v1zm3-19C8.14 2 5 5.14 5 9c0 2.38 1.19 4.47 3 5.74V17c0 .55.45 1 1 1h6c.55 0 1-.45 1-1v-2.26c1.81-1.27 3-3.36 3-5.74 0-3.86-3.14-7-7-7zm2 11.7V16h-4v-2.3C8.48 12.63 7 11.53 7 9c0-2.76 2.24-5 5-5s5 2.24 5 5c0 2.49-1.51 3.65-3 4.7z"
            />
          </svg>
        </div>
        <span
          class="margin-y-0"
        >
          There is 1 suggested milestone for your model based on answers in the Model Plan. 
          <a
            class="usa-link"
            href="/models/0272ca43-1ec1-45a6-a06f-8e2def7f6888/collaboration-area/model-to-operations/milestone-library"
          >
            View suggested milestones
            <svg
              class="usa-icon margin-left-05 top-05"
              focusable="false"
              height="1em"
              role="img"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m12 4-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
              />
            </svg>
          </a>
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SuggestedMilestoneBanner component > renders correctly and has two suggested milestones and matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="bg-accent-cool-lighter shadow-2 position-relative"
  >
    <div
      class="grid-container padding-y-2"
      data-testid="gridContainer"
    >
      <div
        class="grid-row flex-no-wrap"
        data-testid="grid"
      >
        <div
          class="bg-accent-cool-darker circle-3 margin-right-2 display-flex flex-align-center flex-justify-center"
        >
          <svg
            class="usa-icon text-white"
            focusable="false"
            height="1em"
            role="img"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M9 21c0 .55.45 1 1 1h4c.55 0 1-.45 1-1v-1H9v1zm3-19C8.14 2 5 5.14 5 9c0 2.38 1.19 4.47 3 5.74V17c0 .55.45 1 1 1h6c.55 0 1-.45 1-1v-2.26c1.81-1.27 3-3.36 3-5.74 0-3.86-3.14-7-7-7zm2 11.7V16h-4v-2.3C8.48 12.63 7 11.53 7 9c0-2.76 2.24-5 5-5s5 2.24 5 5c0 2.49-1.51 3.65-3 4.7z"
            />
          </svg>
        </div>
        <span
          class="margin-y-0"
        >
          There are 2 suggested milestones for your model based on answers in the Model Plan. 
          <a
            class="usa-link"
            href="/models/0272ca43-1ec1-45a6-a06f-8e2def7f6888/collaboration-area/model-to-operations/milestone-library"
          >
            View suggested milestones
            <svg
              class="usa-icon margin-left-05 top-05"
              focusable="false"
              height="1em"
              role="img"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m12 4-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
              />
            </svg>
          </a>
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
